# puerto-rico-heat-atlas-ai

./: .gitignore  README.md  index.html  package-lock.json  package.json  process_heatmetrics_multi.py  pyproject.toml  summarize_heatmetrics.py  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy-pages.yml  refresh-historical-data.yml
data/: README.md  station_summary.csv  stations.json  stations_heatmetrics_all.geojson
docs/: data-provenance.md  data-schema.md  launch-checklist.md  legacy-files.md
public/: robots.txt  sitemap.xml
scripts/: __init__.py  bootstrap_legacy_raw.py  comfort_metrics.py  discover_noaa_stations.py  fetch_noaa_daily.py  national_station_selection.py  noaa_daily.py  refresh_data.py
src/: main.ts
src/data/: load-data.ts  nws-forecast.test.ts  nws-forecast.ts
src/styles/: main.css
src/types/: heat-data.ts
src/utils/: comfort.test.ts  comfort.ts  i18n.test.ts  i18n.ts  metrics.test.ts  metrics.ts  stations.test.ts  stations.ts  url-state.test.ts  url-state.ts
tests/: test_comfort_metrics.py  test_heatmetrics.py  test_human_centered_metrics.py  test_merge_hotdays.py  test_national_station_selection.py  test_noaa_refresh.py
