[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "puerto-rico-heat-atlas"
version = "0.1.0"
description = "Temperature-only data processing for the Puerto Rico Heat Atlas"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
